--- a/Homework/Homework5/index.html
+++ b/Homework/Homework5/index.html
@@ -46,9 +46,22 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Matt Delac</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Ambe-Mbong-Nwi" target="_blank"
+            >Ambe Mbong</a
+          >
+          and is
+          <a
+            href="https://github.com/Ambe-Mbong-Nwi/Shecodes_Hosting_Challenge"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://dreamy-semifreddo-71c770.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
